--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
 }
 .container h1{
     margin-top: 20px;
-    font-size: 1.4375rem;
+    font-size: 1.375rem;
     font-weight: 700;
     color:var(--dark-blue)
 }
@@ -40,6 +40,7 @@ body{
     font-weight: 400;
     margin-top: 10px;
     width:100%;
+    letter-spacing: 0.01em;
     color:var(--grayish-blue);
 }
 .container img{
