--- a/style.css
+++ b/style.css
@@ -34,15 +34,17 @@ body{
 }
 .text{
     width:100%;
-    padding: 10px 15px;
+    padding: 10px 10px;
 }
 .text p{
     font-weight: 400;
-    margin-top: 6px;
+    font-size:0.9375rem;
+    margin-top: 10px;
     width:100%;
     letter-spacing: 0.01em;
     color:var(--grayish-blue);
 }
 .container img{
     width:100%;
+    border-radius: 15px;
 }
