--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
     --white: hsl(0, 0%, 100%);
     --light-gray: hsl(212, 45%, 89%);
     --grayish-blue: hsl(220, 15%, 55%);
-    --dark-blue: hsl(218, 44%, 22%);
+    --dark-blue: hsl(218, 44%, 22%)
 }
 *{
     margin:0;
     padding:0;
-    box-sizing: border-box;
+    box-sizing: border-box
 }
 body{
     min-height: 100vh;
@@ -16,7 +16,7 @@ body{
     justify-content: center;
     align-items: center;
     font-family: 'Outfit', sans-serif;
-    background-color: var(--light-gray);
+    background-color: var(--light-gray)
 }
 .container{
     max-width: 320px;
@@ -25,26 +25,27 @@ body{
     background-color: var(--white);
     border-radius: 15px;
     text-align: center;
+    box-shadow: 0px 18px 21px -1px rgba(0,0,0,0.1)
 }
 .container h1{
     margin-top: 20px;
     font-size: 1.375rem;
     font-weight: 700;
-    color:var(--dark-blue)
+    color:var(--dark-blue);
+    letter-spacing: 0.01em
 }
 .text{
     width:100%;
-    padding: 10px 10px;
+    padding: 10px 10px
 }
 .text p{
     font-weight: 400;
     font-size:0.9375rem;
-    margin-top: 10px;
     width:100%;
     letter-spacing: 0.01em;
-    color:var(--grayish-blue);
+    color:var(--grayish-blue)
 }
 .container img{
     width:100%;
-    border-radius: 15px;
+    border-radius: 15px
 }
