--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
     height:497px;
     padding:16px;
     background-color: var(--white);
-    border-radius: 15px;
+    border-radius: 12px;
     text-align: center;
     box-shadow: 0px 18px 21px -1px rgba(0,0,0,0.1)
 }
@@ -32,20 +32,21 @@ body{
     font-size: 1.375rem;
     font-weight: 700;
     color:var(--dark-blue);
-    letter-spacing: 0.01em
+    letter-spacing: 0.02em
 }
 .text{
     width:100%;
-    padding: 10px 10px
+    padding: 10px;
 }
 .text p{
     font-weight: 400;
     font-size:0.9375rem;
+    margin-top:16px;
     width:100%;
     letter-spacing: 0.01em;
     color:var(--grayish-blue)
 }
 .container img{
     width:100%;
-    border-radius: 15px
+    border-radius: 12px
 }
